# ollama-classifier-paper

./: .gitignore  main.tex  presentation.qmd  presentation_latex.tex  pyproject.toml  references.bib
.kilo/plans/: 1777551365637-gentle-island.md  add-scikit-llm-variation.md  confidence-analysis-plots.md
experiment/: README.md  analyze_confidence.py  analyze_confidence_mc1.py  calibration_curve.eps  confidence_boxplots.eps  confidence_boxplots_subset.eps  confidence_table.csv  confidence_table.tex  confidence_table.txt  coverage_curve.eps  coverage_curve_margin.eps  experiment.py  generate_sweep.eps  generate_vs_classify.eps  make_subset_boxplots.py  results.xlsx  scoregap_boxplots.eps  scoregap_boxplots_subset.eps  selective_accuracy.eps  selective_accuracy_margin.eps  summary.txt  threshold_discrimination.csv  threshold_discrimination.tex  threshold_discrimination.txt  ttest_results.csv  ttest_results.txt  variations.py
