[project]
name = "ollama-classifier-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "ollama>=0.6.2",
    "ollama-classifier>=0.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "scikit-llm>=0.4.2,<0.5",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.7.0",
]
